[project]
name = "cuberite-fuzzing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boofuzz>=0.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "lorem-text>=3.0",
    "ruff>=0.15.4",
    "ty>=0.0.24",
]

[tool.ruff.lint]
select = ["I", "F401"]
